--- a/student.html
+++ b/student.html
@@ -52,7 +52,7 @@
                 placeholder="Enter your name"
               />
             </div>
-            <button id="join-quiz-btn w-100" class="btn btn-success">
+            <button id="join-quiz-btn" class="btn btn-success w-100">
               Join Quiz
             </button>
           </div>
